--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -57,7 +57,7 @@ header {
     display: block;
     width: auto;
     max-height: 100%;
-    height: 130px;
+    height: auto;
     padding: 0px 30px;
     margin-top: 30px;
   }
@@ -81,17 +81,36 @@ header {
     overflow: hidden;
   }
 
-  /* 主內容區 */
-  .content {
-    width: 100%;
-    display: flex;
-    flex: 1;
-    /* margin: 30px; */
-    padding: 150px;
-    background-color: white;
-    overflow: hidden;
-    box-sizing: border-box; /* 避免 padding 推寬度 */
-    flex-direction: column;
-    justify-content: center;
+  .backtotop {
+    display: none;
+  }
+
+  .topbar-btn {
+    display: none;
+  }
+
+  .user-info {
+    display: none !important;
+  }
+
+  .topbar-member-btn {
+    background-color: transparent; /* 跟 Topbar 融合 */
+    border: none; /* 去掉邊框 */
+    color: white; /* 文字白色 */
+    box-shadow: none; /* 去掉陰影 */
+    /* padding: 8px 12px; 可依 Topbar 調整 */
+    background-color: rgba(255, 255, 255, 0.1); /*輕微 hover 提示 */
+    color: white; /* 文字維持白色 */
+    outline: none;
+    box-shadow: none;
+    padding: 4px 6px;
+    font-size: 12px;
+  }
+
+  .search-input {
+    width: 180px;
+    /* height: 32px; */
+    /* font-size: 12px; */
+    /* overflow: hidden; */
   }
 }
