2025/11/25 下班前還原點 修正手機模式Topbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,22 +21,7 @@ header {
   padding: 0;
 }
 
-@media (max-width: 900px) {
-  .menu-bar {
-    flex-direction: row;
-    position: fixed;
-    /* display: none !important; 手機上隱藏主要導覽列 */
-    top: 130px;
-    left: 0;
-    width: 100%;
-    height: 0px;
-    background-color: #000000fb;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 20px;
-    /* overflow: hidden; */
-  }
-
+@media (max-width: 912px) {
   .topbar-main {
     height: 100%;
     display: none !important; /* 手機上隱藏主要導覽列 */
@@ -44,7 +29,6 @@ header {
     margin-top: 20px;
     flex-shrink: 1;
     min-width: 0;
-    /* overflow: hidden; */
   }
 
   /* 2. 處理 Logo 尺寸和定位 */
@@ -52,20 +36,14 @@ header {
     width: 100%; /* 讓 Logo 區塊佔滿寬度 */
   }
 
-  /* 4. 處理 LoginMenu 容器 */
   .topbar-right {
-    /* 允許 LoginMenu 內部的文字換行 */
+    display: flex;
     white-space: normal;
     justify-content: center; /* 讓 LoginMenu 區塊置中 */
     width: 100%; /* 確保其有足夠寬度 */
-    /* overflow: hidden; */
   }
 
   .backtotop {
-    display: none;
-  }
-
-  .topbar-btn {
     display: none;
   }
 
@@ -73,22 +51,29 @@ header {
     display: none !important;
   }
 
-  .topbar-member-btn {
+  .topbar-btn {
+    display: none !important;
+  }
+
+  .topbar-member-btn.el-button {
     background-color: transparent; /* 跟 Topbar 融合 */
     border: none; /* 去掉邊框 */
     color: white; /* 文字白色 */
     box-shadow: none; /* 去掉陰影 */
-    /* padding: 8px 12px; 可依 Topbar 調整 */
-    background-color: rgba(255, 255, 255, 0.1); /*輕微 hover 提示 */
-    color: white; /* 文字維持白色 */
-    outline: none;
-    box-shadow: none;
     padding: 4px 6px;
     font-size: 12px;
   }
 
+  .topbar-member-btn.el-button:hover,
+  .topbar-btn.el-button:focus {
+    background-color: rgba(255, 255, 255, 0.1); /*輕微 hover 提示 */
+    color: white; /* 文字維持白色 */
+    outline: none;
+    box-shadow: none;
+  }
+
   .search-input {
-    width: 130px;
+    width: 180px;
     margin: 0px;
   }
 
